--- a/proj-1/index.html
+++ b/proj-1/index.html
@@ -10,8 +10,9 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.js"></script>
     <script type="text/javascript" src="script.js"></script>
     <section id="tooltip"></section>
-    <footer><section id="image-placeholder"></section>
-    </footer>
+    <main>
+      <img class="city" src="images/IMG_9335.png"/>
+    </main>
     <section class="heading">
       <h1>THE INMATE STAR CHART</h1>
     </section>
